--- a/index.html
+++ b/index.html
@@ -16,9 +16,21 @@
 <body>
     <header id="header">
 
-        <nav class="container">
+        <nav class="container show">
             <a class="logo" href="#">beauty<span>HairSalon.</span></a>
-            <div class="menu">...</div>
+            <!-- Menu -->
+            <div class="menu">
+                <ul class="grid">
+                    <li><a class="title" href="#home">Início</a></li>
+                    <li><a class="title" href="#about">Sobre</a></li>
+                    <li><a class="title" href="services">Serviços</a></li>
+                    <li><a class="title" href="testimonials">Depoimentos</a></li>
+                    <li><a class="title" href="contact">Contato</a></li>
+                </ul>
+            </div> 
+            <!-- /Menu -->
+            <div class="open">...</div>
+            <div class="close">x</div>
         </nav>
         
     </header>
@@ -30,7 +42,7 @@
                 <img src="img/hair01.avif" alt="Mulher lavado o cabelo de outra mulher">
             </div>
             <div class="text">
-                <h1>Saúde natural para os seus cabelos</h1>
+                <h2 class="title">Saúde natural para os seus cabelos</h2>
                 <p>Um salão exclusivo em São Paulo, especializado em tratamentos naturais.</p>
                 <a class="button" href="#">Agendar um horário</a>
             </div>
@@ -39,10 +51,12 @@
 
         <div class="divider-1"></div>
 
-        <section class="section">
-            <div class="container">
-                div  Outra section
-            </div>
+        <section class="section" id="about">
+            <div class="container grid">Sobre</div>
+        </section>
+
+        <section class="section" id="services">
+            <div class="container grid">Serviços</div>
         </section>
     </main>
 
