--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>beautyHairSalon.</title>
 
+    <!-- ICONES -->
+    <link rel="stylesheet" href="assets/fonts/style.css">
+
     <!-- STYLES -->
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +19,7 @@
 <body>
     <header id="header">
 
-        <nav class="container show">
+        <nav class="container">
             <a class="logo" href="#">beauty<span>HairSalon.</span></a>
             <!-- Menu -->
             <div class="menu">
@@ -29,8 +32,8 @@
                 </ul>
             </div> 
             <!-- /Menu -->
-            <div class="open">...</div>
-            <div class="close">x</div>
+            <div class="toggle icon-menu"></div>
+            <div class="toggle icon-close"></div>
         </nav>
         
     </header>
