--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    <header id="header">
+    <header id="header" class="scroll">
 
         <nav class="container">
             <a class="logo" href="#">beauty<span>HairSalon.</span></a>
@@ -80,21 +80,21 @@
                 </header>
                 <div class="cards grid">
                     <div class="card">
-                        <div class="icon-woman-hair"></div>
+                        <i class="icon-woman-hair"></i>
                         <h3 class="title">Terapia capilar</h3>
                         <p>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, quasi et at facilis autem voluptas voluptatibus, corrupti aspernatur expedita vero qui suscipit eligendi mollitia
                         </p>
                     </div>
                     <div class="card">
-                        <div class="icon-trim"></div>
+                        <i class="icon-trim"></i>
                         <h3 class="title">cortes</h3>
                         <p>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, quasi et at facilis autem voluptas voluptatibus, corrupti aspernatur expedita vero qui suscipit eligendi mollitia
                         </p>
                     </div>
                     <div class="card">
-                        <div class="icon-cosmetic"></div>
+                        <i class="icon-cosmetic"></i>
                         <h3 class="title">Tratamentos</h3>
                         <p>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, quasi et at facilis autem voluptas voluptatibus, corrupti aspernatur expedita vero qui suscipit eligendi mollitia
