--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="text">
                 <h2 class="title">Saúde natural para os seus cabelos</h2>
                 <p>Um salão exclusivo em São Paulo, especializado em tratamentos naturais.</p>
-                <a class="button" href="#">Agendar um horário</a>
+                <a class="button" href="https://api.whatsapp.com/send?phone=+5531900000000&text=Oi! Gostatira de  agendar um horário." target="_blank">Agendar um horário</a>
             </div>
             </div>
         </section>
@@ -213,9 +213,34 @@
             </div>
         </section>
 
+        <div class="divider-1"></div>
+
     </main>
 
-    <footer></footer>
+    <footer class="section">
+        <div class="container grid">
+            <div class="brand">
+                <a class="logo logo-alt" href="#home">beauty<span>HairSalon.</span></a>
+
+                <p>
+                    ©2021 Beautysalon.
+                </p>
+
+                <p>
+                    Todos os direitos reservados.
+                </p>
+            </div>
+
+            <div class="social">
+                <a href="https://www.instagram.com/" target="_blank"><i class="icon-instagram"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="icon-facebook"></i></a>
+                <a href="https://www.youtube.com/" target="_blank"><i class="icon-youtube"></i></a>
+            </div>
+        </div>
+    </footer>
+
+    <a href="#home" class="back-to-top"><i class="icon-arrow-up"></i></a>
+
 
     <!-- Swiper -->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
