--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="container grid">
                 <header>
                     <h2 class="title">Serviços</h2>
-                    <p>Lorem ipsum dolor, sit amet <strong>BeautyHairSalon</strong> consectetur adipisicing elit. Illum itaque delectus magni rem iure, ipsam nostrum quasi voluptatem ratione incidunt! Quia ipsa, similique libero maxime ex repudiandae ipsam odit quae.</p>
+                    <p class="subtitle">Lorem ipsum dolor, sit amet <strong>BeautyHairSalon</strong> consectetur adipisicing elit. Illum itaque delectus magni rem iure, ipsam nostrum quasi voluptatem ratione incidunt! Quia ipsa, similique libero maxime ex repudiandae ipsam odit quae.</p>
                 </header>
                 <div class="cards grid">
                     <div class="card">
